@@ -70,18 +70,18 @@ $typename = "(${typename}[ ]*\**|unsigned short[ ]**\**|unsigned int[ ]*\**|unsi
 "\<_Rb_tree<${typename}, \1, _Identity<\1>, ${typename}, allocator<\1>>" = "_Rb_tree<\1, \1, _Identity<\1>, \7>"
 "_Rb_tree<${typename}, \1, _Identity<\1>, less<\1>>" = "_Rb_tree<\1, \1, _Identity<\1>>"
 # 2.95 map/multimap implementation
-"\<_Rb_tree<${typename}, pair<\1 const, ${typename}>, _Select1st<pair<\1 const, \7>>, less<\1>, allocator<\7>>" = "_Rb_tree<\1, pair<\1 const, \7>,  _Select1st<pair<\1 const, \7>>, less<\1>>"
+"\<_Rb_tree<${typename}, pair<\1 const, (${typename}( const)?)>, _Select1st<pair<\1 const, \7>>, less<\1>, allocator<\7>>" = "_Rb_tree<\1, pair<\1 const, \7>, _Select1st<pair<\1 const, \7>>, less<\1>>"
 # 3.2 map/multimap implementation
-"\<_Rb_tree<${typename}, pair<\1 const, ${typename}>, _Select1st<pair<\1 const, \7>>, less<\1>, allocator<pair<\1 const, \7>>>" = "_Rb_tree<\1, pair<\1 const, \7>,  _Select1st<pair<\1 const, \7>>, less<\1>>"
+"\<_Rb_tree<${typename}, pair<\1 const, ${typename}>, _Select1st<pair<\1 const, \7>>, less<\1>, allocator<pair<\1 const, \7>>>" = "_Rb_tree<\1, pair<\1 const, \7>, _Select1st<pair<\1 const, \7>>, less<\1>>"
 # now we can shrink default comparator.
-"\<_Rb_tree<${typename}, pair<\1 const, ${typename}>,  _Select1st<pair<\1 const, \7>>, less<\1>>" = "_Rb_tree<\1, pair<\1 const, \7>,  _Select1st<pair<\1 const, \7>>>"
+"\<_Rb_tree<${typename}, pair<\1 const, (${typename}( const)?)>, _Select1st<pair<\1 const, \7>>, less<\1>>" = "_Rb_tree<\1, pair<\1 const, \7>, _Select1st<pair<\1 const, \7>>>"
 # get rid of _Select1st and _Identity
-# FIXME: the presence od _Identity<> and _Select1st<> was allowing to quickly
+# FIXME: the presence od _Identity<> and _Select1st<> allowed to quickly
 # differentiate a set or a map, the rule now to differentiate them is:
 # second parameter to _Rb_tree* is a pair<> ==> map else set<>. Either we need
 # to document this or remove _Identity and _Select1st pattern
 "\<_Identity<${typename}>" = "\1"
-"\<_Select1st<pair<${typename} const, ${typename}>>" = "\1 const"
+"\<_Select1st<pair<${typename} const, ${typename}( const)?>>" = "\1 const"
 
 "\<_List_base<${typename}, allocator<\1>>" = "_List_base<\1>"
 
@@ -137,8 +137,9 @@ $iosfwd_name = "\<basic_(string|ios|(stream|file|string)buf|(i|o|io)stream|[io]?
 "\<fpos<__mbstate_t>" = "streampos"
 
 # locale
-"\<(money|time|num)_put<${typename}, ostreambuf_iterator<\2>>" = "\1_put<\2>"
-"\<(money|time|num)_get<${typename}, istreambuf_iterator<\2>>" = "\1_get<\2>"
+# strictly speaking this accept num_put<..., istream_iterator<...> > or
+# num_get<..., ostream_iterator<...> > but this can't compile so no big deal
+"\<(money|time|num)_(put|get)<${typename}, (i|o)streambuf_iterator<\3>>" = "\1_\2<\3>"
 "\<moneypunct(_byname)?<${typename}, \(bool\)0>" = "moneypunct\1<\2>"
 
 # 3.2 algorithm
