@@ -1,5 +1,10 @@
 2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libregex/stl.pat.in: minor fix/improvments
+	* libregex/mangled-name.txt: add tests
+
+2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* pp/opreport.cpp: fix thinko when --merge=lib
 
 2003-08-12  John Levon  <levon@movementarian.org>
